# chatterbox

./: .gitignore  README.md  pyproject.toml  tts.py
src/chatterbox/: __init__.py  tts.py  wav.py
src/chatterbox/models/: utils.py
src/chatterbox/models/s3gen/: const.py  decoder.py  flow.py  s3gen.py  xvector.py
src/chatterbox/models/s3gen/utils/: mel.py
src/chatterbox/models/s3tokenizer/: s3tokenizer.py
src/chatterbox/models/t3/: t3.py
src/chatterbox/models/t3/modules/: cond_enc.py  perceiver.py
src/chatterbox/models/voice_encoder/: melspec.py  voice_encoder.py
