[project]
name = "chatterbox-tts"
version = "0.1.2"
description = "Chatterbox MPS: Resemble AI's TTS optimized for Apple Silicon"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
    {name = "dnschnur", email = "dnschnur@gmail.com"}
]
dependencies = [
    "numpy==2.2",
    "librosa",
    "s3tokenizer",
    "torch",
    "torchaudio",
    "transformers",
    "diffusers",
    "conformer",
    "safetensors"
]

[project.urls]
Homepage = "https://github.com/dnschnur/chatterbox"
Repository = "https://github.com/dnschnur/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
